syntax = "proto3";

enum SortType {
  Name = 0;
  Size = 1;
  Date = 2;
}
